社区和我的界面效果图

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,34 @@
     <string name="tttt_item_txt">我就是产品</string>
     <string name="qqfs_tit">情趣服饰</string>
     <string name="qqfs_name">/qingqufushi</string>
+    <string name="biaoti">优趣</string>
+    <string name="rementuijian">------良心推荐------</string>
+    <string name="tuijian">热门推荐</string>
+    <string name="wode">我的</string>
+    <string name="my_name">小二坏坏</string>
+    <string name="my_qianming">个性签名</string>
+    <string name="my_zuji">足迹</string>
+    <string name="my_shoucang">收藏</string>
+    <string name="my_dingdan_num">13</string>
+    <string name="my_dingdan">订单</string>
+    <string name="my_fayan">发言</string>
+    <string name="my_guanzhu">关注</string>
+    <string name="my_haoyou">好友</string>
+    <string name="my_fensi">粉丝</string>
+    <string name="my_qudou_txt">我的趣豆</string>
+    <string name="my_qubi_txt">我的趣币</string>
+    <string name="my_youhui_txt">我的优惠券</string>
+    <string name="my_jiangli_txt">社区奖励</string>
+    <string name="my_jinbi_txt">我的金币</string>
+    <string name="my_daka_txt">打卡</string>
+    <string name="my_yinsi_txt">隐私保护</string>
+    <string name="my_kefu_txt">客服中心</string>
+    <string name="my_qudou_num"><![CDATA[2 〉]]></string>
+    <string name="classify_quanzi_title">我的圈子</string>
+    <string name="classify_quanzi_title1">推荐圈子</string>
+    <string name="classify_more"><![CDATA[查看更多>]]></string>
+    <string name="quan_wen_content">坏坏就是大好人，不管你信不信</string>
+    <string name="quan_wen_num">今日：13</string>
+    <string name="quanzi_renshu">圈子人数：1313</string>
+    <string name="quan_tuijian_guanzhu">关注</string>
 </resources>
